--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="3; url=harishhhh.kesug.com">
+    <meta http-equiv="refresh" content="3; url=https://harishhhh.kesug.com/">
     <title>Redirecting in 3 seconds...</title>
   </head>
   <body>
