--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
+
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="3; url=https://harishhhh.kesug.com/">
-    <title>Redirecting in 3 seconds...</title>
-  </head>
-  <body>
-    <p>You will be redirected in 3 seconds. If not, <a href="https://your-infinityfree-url.epizy.com/">click here</a>.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Welcome</title>
+</head>
+<body>
+  <h1>Hello, visitor!</h1>
+
+  <!-- Invisible image that triggers the PHP logger -->
+  <img src="index.php" style="display:none;" alt="">
+
+</body>
 </html>
